# conan_samples

./: CMakeLists.txt  README.md  conanfile.txt
modules/poco_test/: CMakeLists.txt
modules/poco_test/src/: main.cpp  pch.h  poco_test.cpp
script/: cmakegen-vc12_x86_debug.cmd  cmakegen-vc14-x64_built_in.cmd  cmakegen-vc14-x86_built_in.cmd  cmakegen-vc14_x64_debug.cmd  cmakegen-vc14_x64_release.cmd  cmakegen-vc14_x86_debug.cmd  cmakegen-vc14_x86_release.cmd
